Fixes NavBar overflow, fixes logout button toggle (logged in users) closes #28 closes #29

--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -42,7 +42,7 @@ button:hover {
   }
 
   .login {
-    width: 10vw;
+    width: 100%;
     height: 45px;
     margin: auto 1vw;
     display: flex;
